# infra-myblog

./: .gitmodules
.github/workflows/: deploy-salesme.yml  deploy-sre-agent.yml
infra/: backend.tf  main.tf  variable.tf  versions.tf
infra/blod/: .terraform.lock.hcl  backend.tf  iam-github-oidc.tf  local.tf  main.tf  output.tf  provider.tf  variable.tf  versions.tf
infra/blod/.terraform/: environment  terraform.tfstate
infra/blod/www/: index.html
infra/blod/www/css/: style.css
infra/blod/www/js/: main.js
infra/blod/www/posts/: ha-cluster-doks.html  incident-management.html  kubernetes-for-beginner.html  kubernetes-mistakes.html  monitoring-observability.html  sli-slo-sla.html  terraform-for-beginner.html
salesme/: checklist.md
sre-agent-oncall/: .env.example  Dockerfile  README.md  checklist.md  pyproject.toml
sre-agent-oncall/docs/: connect-doks.md
sre-agent-oncall/runbooks/: crashloop.md  node-unhealthy.md  resource-starvation.md
sre-agent-oncall/scripts/: connect-doks.sh  rbac.yaml
sre-agent-oncall/src/sre_agent/: config.py  graph.py  main.py  state.py
sre-agent-oncall/src/sre_agent/nodes/: diagnose.py  remediate.py  respond.py  synthesize.py
sre-agent-oncall/src/sre_agent/rag/: ingest.py  retriever.py
sre-agent-oncall/src/sre_agent/tools/: kubectl.py  pagerduty.py  prometheus.py  slack.py
sre-agent-oncall/systemd/: sre-agent.service
